--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,11 +1,11 @@
 :root {
-    --oldFashioned: #7a211b;
-    --daiquiri: #d0ab4a;
-    --pinaColada: #fffee0;
-    --lounge: #28282f;
-    --decor: #a6806b;
-    --lime: #3b640e;
+    --olive: #465e5a;
+    --purple: #59496d;
+    --light: #cbbdb2;
+    --medium: #8c7968;
+    --dark: #202537;
     --negroni: #ad0005;
+    --teal: #0c9cad;
 }
 
 * {
@@ -15,7 +15,7 @@
 }
 
 body {
-    color: var(--pinaColada);
+    color: var(--light);
     font-family: Helvetica, Arial, sans-serif;
     line-height: 1.5;
 }
@@ -23,7 +23,7 @@ body {
 /* HEADER STYLES START */
 header {
     width: 100%;
-    background-color: var(--decor);
+    background-color: var(--medium);
 }
 
 .pure-menu-heading {
@@ -31,7 +31,7 @@ header {
     font-weight: bold;
     font-size: 36px;
     margin: 0;
-    color: var(--lounge);
+    color: var(--dark);
 }
 
 header ul {
@@ -41,15 +41,22 @@ header ul {
 }
 
 .pure-menu-link {
-    background-color: var(--decor);
-    color: var(--lounge);
+    margin-left: 20px;
+    background-color: var(--olive);
+    color: var(--light);
+}
+
+.pure-menu-link:hover {
+    background-color: var(--light);
+    color: var(--olive);
 }
 /* HEADER STYLES END */
 
 /* MAIN PAGE STYLES START */
 main {
     margin: 0 auto;
-    background-color: var(--lounge);
+    height: 100vh;
+    background-color: var(--dark);
 }
 
 .pure-g {
@@ -74,12 +81,14 @@ img {
 
 /* MODAL STYLES START */
 .modal {
-    background-color: var(--oldFashioned);
+    border: 3px solid var(--medium);
+    border-radius: 5px;
+    background-color: var(--olive);
 }
 
 .modal-title {
     padding: 10px 20px;
-    color: var(--daiquiri)
+    color: var(--light);
 }
 
 .modal-text {
@@ -87,8 +96,7 @@ img {
 }
 
 .modal-button {
-    background: var(--lime);
-    color: var(--pinaColada);
+    color: var(--light);
 }
 /* MODAL STYLES END */
 
@@ -98,13 +106,13 @@ img {
 }
 
 .confirm {
-    background-color: var(--lime);
-    color: var(--pinaColada);
+    background-color: var(--teal);
+    color: var(--light);
 }
 
 .cancel {
     background-color: var(--negroni);
-    color: var(--pinaColada);
+    color: var(--light);
 }
 /* UTILITY STYLES END */
 
