--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,11 +1,13 @@
 :root {
     --olive: #465e5a;
     --purple: #59496d;
+    
     --light: #cbbdb2;
     --medium: #8c7968;
     --dark: #202537;
-    --negroni: #ad0005;
+
     --teal: #0c9cad;
+    --negroni: #ad0005;
 }
 
 * {
@@ -81,21 +83,45 @@ img {
 
 /* MODAL STYLES START */
 .modal {
-    border: 3px solid var(--medium);
-    border-radius: 5px;
-    background-color: var(--olive);
+    position: fixed;
+    z-index: 99;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 60%;
+    max-width: 100%;
+    height: 400px;
+    max-height: 100%;
+    overflow: hidden;
+    border: 3px solid var(--light);
+    border-radius: 10px;
+    padding: 15% auto;
+    background-color: var(--purple);
+    float: right;
 }
 
 .modal-title {
+    text-align: center;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
     padding: 10px 20px;
+    background-color: var(--olive);
     color: var(--light);
 }
 
 .modal-text {
+    height: 100%;
     padding: 20px;
 }
 
+.modal-btns {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+}
+
 .modal-button {
+    margin: 0 15px 15px 15px;
     color: var(--light);
 }
 /* MODAL STYLES END */
@@ -112,7 +138,7 @@ img {
 
 .cancel {
     background-color: var(--negroni);
-    color: var(--light);
+    color: var(--White);
 }
 /* UTILITY STYLES END */
 
