--- a/assets/styles.css
+++ b/assets/styles.css
@@ -67,7 +67,7 @@ main {
 
 #image-container,
 #ingredients-container,
-#intructions-container {
+#instructions-container {
     margin: 3% auto;
     position: relative;
 }
@@ -155,7 +155,7 @@ img {
 
     #image-container,
     #ingredients-container,
-    #intructions-container {
+    #instructions-container {
         margin: 30px;
     }
 }
@@ -189,7 +189,7 @@ img {
 
     #image-container,
     #ingredients-container,
-    #intructions-container {
+    #instructions-container {
         margin: 30px 20% 30px 20%;
     }
 }
