--- a/assets/styles.css
+++ b/assets/styles.css
@@ -216,6 +216,10 @@ img {
 /* Spotify API STYLES END */
 
 /*Start of Tivia*/
+#trivia-modal {
+    background-color: var(--dark);
+}
+
 h1 {
     padding: 0 auto;
     margin: 0 auto;
@@ -226,10 +230,20 @@ a {
     text-decoration: none;
     color: var(--light);
 }
+
+#trivia-container {
+    width: 100%;
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 #trivia-start-button {
     background-color: var(--medium);
     padding: auto;
-    margin: 50px 40%;
+    /* margin: 50px 40%; */
     width: 350px;
     height: 75px;
     font-size: 26px;
@@ -240,24 +254,24 @@ a {
     background-color: var(--purple);
 }
 
-#trivia-content {
+/* #trivia-container {
     background-color: var(--dark);
     height: auto;
     margin: auto;
     padding: auto;
-}
-#trivia-content h3 {
+} */
+#trivia-container h3 {
     font-weight: bold;
 }
-#trivia-content h4 {
+#trivia-container h4 {
     font-weight: bold;
     margin: 10px 10px;
 }
-#trivia-content ul {
+#trivia-container ul {
     margin-bottom: 10px;
     border-bottom: var(--dark) solid;
 }
-#trivia-content ul button {
+#trivia-container ul button {
     padding: 10px;
     margin-right: 3px;
     background-color: var(--medium);
@@ -266,11 +280,11 @@ a {
    
 }
 
-#trivia-content .correct-answer {
+#trivia-container .correct-answer {
     background-color: var(--lime);
 }
 
-#trivia-content .wrong-answer {
+#trivia-container .wrong-answer {
     background-color: var(--negroni);
 }
 /* end of trivia */
