--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -18,6 +18,16 @@
     font-family: 'Righteous', cursive; /* from Google Fonts */
 }
 
+h1 {
+    padding: 0 auto;
+    margin: 0 auto;   
+}
+
+a {
+    text-decoration: none;
+    color: var(--light);
+}
+
 body {
     color: var(--light);
     line-height: 1.5;
@@ -26,7 +36,12 @@ body {
 /* HEADER STYLES START */
 header {
     width: 100%;
+    height: 100px;
     background-color: var(--medium);
+    position: absolute;
+    top: 0;
+    bottom: auto;
+    z-index: 98;
 }
 
 .pure-menu-heading {
@@ -58,35 +73,24 @@ header ul {
 /* MAIN PAGE STYLES START */
 main {
     margin: 0 auto;
-    height: 100vh;
+    padding: 120px 20px 100px 20px;
+    min-height: 100vh;
     background-color: var(--dark);
     overflow: hidden;
+    position: relative;
+}
+
+footer {
+    height: 80px;
+    position: absolute;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .pure-g {
     letter-spacing: normal;
-}
-
-#spotify-widget,
-#image-container,
-#ingredients-container,
-#instructions-container {
-    margin: 3% auto;
-    position: relative;
-}
-
-img {
-    background-image: url(./images/old-fashioned.webp);
-    background-size: cover;
-    width: 250px;
-    height: 250px;
-    border-radius: 2%;
-}
-
-.cocktail-search-error {
-    text-align: center;
-    margin: 100px 10%;
-    line-height: 2;
 }
 /* MAIN PAGE STYLES END */
 
@@ -139,172 +143,7 @@ img {
     background-color: var(--teal);
     color: var(--dark);
 }
-
-.playlist-btn {
-    display: block;
-    width: 70%;
-    margin: 5px auto;
-    padding: 1px;
-}
-
-.cocktail-name {
-    margin: 3px;
-    padding: 3px;
-}
-
-.playlist-btn,
-.cocktail-name {
-    border: 3px solid var(--medium);
-    border-radius: 10px;
-    background-color: var(--olive);
-    color: var(--light);
-}
-
-#cocktail-search-history {
-    display: flex;
-    justify-content: space-around;
-}
 /* MODAL STYLES END */
-
-/* Spotify API STYLES START */
-.container {
-    display: grid;
-    grid-template-columns: 30% 40%;    
-    width: 100%;
-    background-color: var(--medium);
-    margin: auto;
-    justify-content: center;
-}
-
-.row {
-    flex-direction: row;
-}
-
-.music-header {
-    margin: auto;
-    font-size: 35px;
-    color: var(--dark);
-}   
-    
-.form-label {
-    color: var(--dark);
-    font-size: large;
-    font-weight: bold;
-}
-
-.form-control {
-    color: var(--dark);
-}
-    
-.btn {
-    background-color: var(--lime);
-    padding: 10px 15px;
-    color: var(--dark);
-    padding: 10px;
-}
-
-.song-list a {
-    margin: 10px 5px 10px 5px;
-    border: solid 3px var(--lime);
-    display: inline-flex;
-    color: var(--light);   
-}
-
-.song-detail {
-    display: block;
-}
-/* Spotify API STYLES END */
-
-/*Start of Tivia*/
-#trivia-modal {
-    background-color: var(--dark);
-}
-
-h1 {
-    padding: 0 auto;
-    margin: 0 auto;
-    
-}
-
-a {
-    text-decoration: none;
-    color: var(--light);
-}
-
-#trivia-container {
-    width: 100%;
-    height: 80%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-#trivia-header {
-    top: 25%;
-}
-
-#trivia-start-button {
-    background-color: var(--medium);
-    padding: auto;
-    width: 350px;
-    height: 75px;
-    font-size: 26px;
-    overflow: hidden;
-}
-
-#trivia-start-button:hover {
-    background-color: var(--purple);
-}
-
-#trivia-container h3 {
-    font-weight: bold;
-}
-#trivia-container h4 {
-    font-weight: bold;
-    margin: 10px 10px;
-}
-#trivia-container ul {
-    margin-bottom: 10px;
-    border-bottom: var(--dark) solid;
-}
-#trivia-container ul button {
-    padding: 10px;
-    margin-right: 3px;
-    background-color: var(--medium);
-    color: var(--dark);
-    font-weight: 400;
-   
-}
-
-#trivia-container .correct-answer {
-    background-color: var(--lime);
-}
-
-#trivia-container .wrong-answer {
-    background-color: var(--negroni);
-}
-
-#trivia-content {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    text-align: center;
-}
-
-.question-info {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    justify-content: space-between;
-}
-
-.answer-feedback {
-    margin: 0 70px;
-}
-/* end of trivia */
 
 /* UTILITY STYLES START */
 .hide {
