--- a/assets/css/cocktails.css
+++ b/assets/css/cocktails.css
@@ -15,19 +15,22 @@
     border-radius: 2%;
 }
 
-/* img {
-    background-image: url(../images/old-fashioned.webp);
-    background-size: cover;
-    width: 250px;
-    height: 250px;
-    border-radius: 2%;
-} */
-
 #image-container,
 #ingredients-container,
 #instructions-container {
-    margin: 3% auto;
-    position: relative;
+    min-height: 230px;
+    display: flex;
+    width: 25%;
+    min-width: 230px;
+    max-width: 300px;
+    margin: 20px;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+
+#image-container {
+    min-width: 250px;
 }
 
 .cocktail-search-error {
@@ -39,4 +42,11 @@
 #cocktail-search-history {
     display: flex;
     justify-content: space-around;
+}
+
+@media screen and (max-width: 950px) {
+    #instructions-container {
+        width: 100%;
+        max-width: 520px;
+    }
 }
