--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -90,6 +90,16 @@ footer {
     align-items: center;
 }
 
+#main-content-container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
 .pure-g {
     letter-spacing: normal;
 }
