--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -34,8 +34,19 @@ body {
     position: relative;
 }
 
+button {
+    margin: 20px;
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+}
+
 /* HEADER STYLES START */
 header {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
     width: 100%;
     height: 100px;
     background-color: var(--medium);
@@ -45,27 +56,24 @@ header {
     z-index: 98;
 }
 
-.pure-menu-heading {
+.main-title {
     text-align: left;
     font-weight: bold;
     font-size: 36px;
-    margin: 0;
+    margin: 10px 30px;
     color: var(--dark);
 }
 
-header ul {
-    margin-right: 50px;
+nav {
     width: 50%;
-    text-align: right;
 }
 
-.pure-menu-link {
-    margin-left: 20px;
+.menu-button {
     background-color: var(--olive);
     color: var(--light);
 }
 
-.pure-menu-link:hover {
+.menu-button:hover {
     background-color: var(--light);
     color: var(--olive);
 }
@@ -179,53 +187,34 @@ footer {
 /* UTILITY STYLES END */
 
 /* MEDIA QUERIES START */
-@media screen and (max-width: 1000px) {
-
-    .pure-menu-horizontal .pure-menu-list {
-        justify-content: flex-end;
-    }
-
-    .pure-g {
-        justify-content: center;
-    }
-
-    #image-container,
-    #ingredients-container,
-    #instructions-container {
-        margin: 30px;
-    }
-}
-
 @media screen and (max-width: 680px) {
 
     header {
-        text-align: center;
-    }
-
-    .title {
-        text-align: center;
-        width: 100%;
-    }
-
-    .pure-menu-horizontal .pure-menu-list {
-        width: 100%;
+        align-items: center;
         justify-content: center;
-        display: block;
     }
 
-    header ul {
+    .main-title {
+        margin: 0;
+        padding: 0;
         text-align: center;
-    }
-
-    .pure-menu-link {
+        font-size: 32px;
         width: 100%;
-        text-align: center;
-        font-size: 20px;
     }
 
-    #image-container,
-    #ingredients-container,
-    #instructions-container {
-        margin: 30px 20% 30px 20%;
+    nav {
+        width: 100%;
+        height: 30px;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    .menu-button {
+        margin: 0;
+    }
+
+    #main-content-container {
+        width: 80vw;
     }
 }
