--- a/assets/css/cocktails.css
+++ b/assets/css/cocktails.css
@@ -1,3 +1,48 @@
+.cocktail-modal {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+#cocktail-search-form {
+    margin: 30px 0 50px 0;
+    padding: 0 10px;
+    width: 100%;
+    height: 50px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: baseline;
+}
+
+#cocktail-search-form label {
+    padding: 0;
+    height: auto;
+}
+
+#cocktail-search-form div {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+#cocktail-search-form div input {
+    border-radius: 5px;
+    border: none;
+    padding: 10px;
+    width: 100%;
+}
+
+#cocktail-search-form div button {
+    background-color: var(--dark);
+    margin: 0;
+    width: 50px;
+}
+
 .cocktail-name {
     border: 3px solid var(--medium);
     border-radius: 10px;
@@ -42,6 +87,14 @@
 #cocktail-search-history {
     display: flex;
     justify-content: space-around;
+}
+
+#random-confirm {
+    padding: auto;
+    width: 350px;
+    height: 75px;
+    font-size: 26px;
+    overflow: hidden;
 }
 
 @media screen and (max-width: 1000px) {
