--- a/assets/css/cocktails.css
+++ b/assets/css/cocktails.css
@@ -89,8 +89,12 @@
 
 .cocktail-search-error {
     text-align: center;
-    margin: 100px 10%;
+    margin: 10px 10%;
     line-height: 2;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 #cocktail-search-history {
@@ -98,7 +102,8 @@
     justify-content: space-around;
 }
 
-#random-confirm {
+#random-confirm,
+#surprise-confirm {
     padding: auto;
     width: 350px;
     height: 75px;
