restyling random cocktail section

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -145,6 +145,7 @@ footer {
 .secondary-title {
     margin-top: 30px;
     border-radius: 0;
+    background-color: var(--purple);
 }
 
 .modal-text {
